--- a/HTML/style.css
+++ b/HTML/style.css
@@ -27,6 +27,7 @@ body {
 p {
     line-height: 200%;
     vertical-align: middle;
+    word-break:keep-all;
 }
 
 .bg {
@@ -52,16 +53,18 @@ p {
 
 .nav_bar {
     display: grid;
+    padding: 0 10%;
 }
 
 #nav1 {
     grid-template-columns: repeat(4, 1fr);
-    column-gap: 32px;
+
+    column-gap: 5%;
+    
 }
 
 #nav2 {
-    padding: 0 100px;
-    grid-template-columns: 100px 100px 100px;
+    grid-template-columns: 15% 15% 15%;
 }
 
 #data {
@@ -70,10 +73,12 @@ p {
 
 .nav_bar h3 {
     display: inline-block;
+    word-break: keep-all;
 }
 
 .nav_bar h4 {
     display: inline-block;
+    word-break: keep-all;
 }
 
 .nav_bar h3:hover {
@@ -87,6 +92,7 @@ p {
 
 table {
     padding: 0 15%;
+    min-width: 480px;
 }
 
 table h5 {
