--- a/views/main.ejs
+++ b/views/main.ejs
@@ -14,7 +14,7 @@
 <body>
     <div class="bg">
         <div class="board">
-            <h1>Lecture Stats</h1>
+            <h1 id="title">"Lecture_Stats"</h1>
             <nav class="nav_bar" id="nav1">
                 <span><h4>과목별 조회</h4></span>
                 <span><h4>교수별 조회</h4></span>
