--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #0070FF;
-    color: #004faf;
+    background-color: #328bff;
+    color: #f2f8ff;
     font-family: 'TSTAR', 'ChungbukNationalUniversity-Regular', Helvetica, Arial, sans-serif;
     text-align: center;
     margin: 0;
@@ -22,9 +22,9 @@ body {
     font-style: normal;
 }
 
-#title {
+/* #title {
     color: #e2efff;
-}
+} */
 
 p {
     line-height: 200%;
@@ -51,6 +51,10 @@ p {
     width: 100%;
 }
 
+/* .header {
+    background-color: aliceblue;
+} */
+
 .nav_bar {
     display: grid;
     padding: 0 5%;
@@ -60,7 +64,7 @@ p {
 #nav1 {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 5%;
-    color: #e2efff;
+    /* color: #e2efff; */
 }
 
 #nav2 {
@@ -84,7 +88,8 @@ input {
 }
 
 #data {
-    background-color: #e2efff;
+    background-color: #f2f8ff;
+    color: #003c84;
 }
 
 #nav_bar input {
@@ -168,6 +173,6 @@ tr td:nth-child(2) h5:hover {
 }
 
 .footer {
-    color: #7bb6ff;
+    color: #f2f8ff;
     padding: 2% 0;
 }
