--- a/views/main.ejs
+++ b/views/main.ejs
@@ -14,12 +14,16 @@
 <body>
     <div class="bg">
         <div class="board">
-            <h1 id="title">"Lecture_Stats"</h1>
-            <nav class="nav_bar" id="nav1">
-                <span><h4>과목별 조회</h4></span>
-                <span><h4>교수별 조회</h4></span>
-                <span><h4>강의 통계</h4></span>
-            </nav>
+            <div class="header">
+                <h1 id="title">Lecture Stats</h1>
+                <nav class="nav_bar" id="nav1">
+                    <span><h4>과목별 조회</h4></span>
+                    <span><h4>교수별 조회</h4></span>
+                    <span><h4>강의 통계</h4></span>
+                </nav>
+            </div>
+            
+            
             <div id="data">
                 <nav class="nav_bar" id="nav2">
                     <span><h5>전공</h5></span>
