--- a/views/main.ejs
+++ b/views/main.ejs
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="에브리타임 - 강의평 모아보기">
+    <meta property="og:description" content="데이터 통계 기반의 가장 정확한 수강신청 도우미">
+    <meta property="og:image" content="/images/main.png">
+    <title>에브리타임 - 강의평 모아보기</title>
     <link rel="stylesheet" href="/css/style.css">
-    
-    <title>에브리타임 - 강의평 톺아보기</title>
     <script src="/js/app.js"> </script>
 
 </head>
