--- a/views/main.ejs
+++ b/views/main.ejs
@@ -42,15 +42,15 @@
 
                     <!-- <span><input></span> -->
                 </nav>
-                <nav class="nav_bar" id="nav3">
-                    <!-- <span><h5>평가 높은 순</h5></span>
+                <!-- <nav class="nav_bar" id="nav3">
+                    <span><h5>평가 높은 순</h5></span>
                     <span><h5>평가 낮은 순</h5></span>
-                    <span><h5>평가 많은 순</h5></span> -->
+                    <span><h5>평가 많은 순</h5></span>
                     <span>
                         <input>
                         <h5>검색</h5>
                     </span>
-                </nav>
+                </nav> -->
                 <div class="sources">
                     <table>
                         <tbody>
