--- a/views/main.ejs
+++ b/views/main.ejs
@@ -62,7 +62,7 @@
                                 </td>
                                 <td>
                                     <h4>
-                                        평점
+                                        선호도
                                     </h4>
                                 </td>
                                 <td>
@@ -81,7 +81,7 @@
                                     </td>
                                     <td id="rate" rowspan="2">
                                         <h5>
-                                            <%= arr[i][3] * 5%>
+                                            <%= (arr[i][3] * 100) + "%"%>
                                         </h5>
                                     </td>
                                     <td id="rate_count" rowspan="2">
