--- a/views/main.ejs
+++ b/views/main.ejs
@@ -107,7 +107,7 @@
             </div>
             <div id="footer" class="info">
                 <p>Everytime Lecture Stats Viewer</p>
-                <p>By 오지혜</p>
+                <p>By 4 Cute Python Lovers</p>
                 <!-- <p><%=arr[1][4]%></p> -->
             </div>
         </div>
