--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -1,4 +1,5 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
 @font-face {
   font-family: "TSTAR";
   src: url("TSTAR-PRO-Bold.otf") format("woff"), url("TSTAR-PRO-Bold.otf") format("woff2");
@@ -63,7 +64,7 @@ p {
 
 .nav_bar {
   display: grid;
-  padding: 0 5%;
+  padding: 0;
   color: #F2F2F2;
 }
 .nav_bar h4 {
@@ -92,19 +93,55 @@ p {
 #nav1 {
   grid-template-columns: repeat(3, 1fr);
   column-gap: 5%;
+  padding: 0 5%;
   /* color: #e2efff; */
 }
 
 #nav2 {
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   /* width: 50%; */
   column-gap: 5%;
   background-color: #116F92;
 }
 
 #nav3 {
-  /* width: 50%; */
-  grid-template-columns: 20% 20% 20% 40%;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: #116F92;
+}
+
+select {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+select {
+  /* 생략 */
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #444;
+  background-color: #fff;
+  padding: 0.6em 1.4em 0.5em 0.8em;
+  border: 1px solid #aaa;
+  border-radius: 0.5em;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  text-align-last: center;
+  text-align: center;
+  -ms-text-align-last: center;
+  -moz-text-align-last: center;
+}
+select:hover {
+  border-color: #888;
+}
+select:focus {
+  border-color: #aaa;
+  box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+  color: #222;
+  outline: none;
+}
+select:disabled {
+  opacity: 0.5;
 }
 
 /* #nav2 span{
@@ -126,13 +163,12 @@ p {
 .sources table {
   margin: 0 auto;
   align-items: center;
-  padding: 0 5%;
   max-width: 960px;
 }
 .sources table tbody td:nth-child(1) {
-  width: 70%;
+  width: 60%;
   text-align: center;
-  min-width: 240px;
+  min-width: 186px;
 }
 .sources table tbody td:nth-child(2) {
   text-align: center;
@@ -151,6 +187,7 @@ p {
 }
 .sources table tfoot tr td:nth-child(1) {
   text-align: left;
+  padding-left: 5px;
 }
 .sources table tfoot tr td:nth-child(1) h5:hover {
   color: #F26A1B;
@@ -185,7 +222,7 @@ p {
 
 /* 
 #nav2 span {
-    min-width: 80px;
+
     max-width: 120px;
 } */
 /* tfoot tr:nth-child(2n+1) td:nth-child(2){
