--- a/statics/scss/style.scss
+++ b/statics/scss/style.scss
@@ -76,7 +76,7 @@ p {
 
 .nav_bar {
     display: grid;
-    padding: 0 5%;
+    padding: 0;
     color: $color3;
     h4 {
         display: inline-block;
@@ -105,19 +105,58 @@ p {
 #nav1 {
     grid-template-columns: repeat(3, 1fr);
     column-gap: 5%;
+    padding: 0 5%;
     /* color: #e2efff; */
 }
 
 #nav2 {
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     /* width: 50%; */
     column-gap: 5%;
     background-color: $color2;
 }
 
 #nav3 {
-    /* width: 50%; */
-    grid-template-columns: 20% 20% 20% 40%;
+    grid-template-columns: repeat(3, 1fr);
+    background-color: $color2;
+}
+
+select {
+    -moz-appearance: none;
+      -webkit-appearance: none;
+      appearance: none;
+}
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
+
+select {
+  /* 생략 */
+    font-size: 0.75rem;
+    font-weight: 400;
+    line-height: 1.5;   
+    color: #444;
+    background-color: #fff; 
+    padding: 0.6em 1.4em 0.5em 0.8em; 
+    border: 1px solid #aaa;
+    border-radius: 0.5em;
+    box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+    text-align-last: center;
+    text-align: center;
+    -ms-text-align-last: center;
+-moz-text-align-last: center;
+    &:hover {
+        border-color: #888;
+    }
+
+    &:focus {
+        border-color: #aaa;
+        box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
+        color: #222;
+        outline: none;
+    }
+
+    &:disabled {
+        opacity: 0.5;
+    }
 }
 
 /* #nav2 span{
@@ -139,13 +178,12 @@ p {
     table {
         margin: 0 auto;
         align-items: center;
-        padding: 0 5%;
         max-width: 960px;
         tbody {
             td:nth-child(1) {
-                width: 70%;
+                width: 60%;
                 text-align: center;
-                min-width: 240px;
+                min-width: 186px;
             }
             td:nth-child(2) {
                 text-align: center;
@@ -166,6 +204,7 @@ p {
                 td {
                     &:nth-child(1) {
                         text-align: left;
+                        padding-left: 5px;
                         h5:hover {
                             color: $hover2;
                             cursor: pointer;
@@ -209,7 +248,7 @@ p {
 
 /* 
 #nav2 span {
-    min-width: 80px;
+
     max-width: 120px;
 } */
 /* tfoot tr:nth-child(2n+1) td:nth-child(2){
