--- a/views/main.ejs
+++ b/views/main.ejs
@@ -12,153 +12,35 @@
     </nav>
     <nav class="nav_bar" id="nav3">
         <span>
-            <select name="단과대">
-                <option value="경영대학">경영대학</option>
-                <option value="공과대학">공과대학</option>
-                <option value="농업생명환경대학">농업생명환경대학</option>
-                <option value="바이오헬스공유대학">바이오헬스공유대학</option>
-                <option value="사범대학">사범대학</option>
-                <option value="사회과학대학">사회과학대학</option>
-                <option value="생활과학대학">생활과학대학</option>
-                <option value="수의과대학">수의과대학</option>
-                <option value="약학대학">약학대학</option>
-                <option value="연계전공">연계전공</option>
-                <option value="융합전공">융합전공</option>
-                <option value="의과대학">의과대학</option>
-                <option value="인문대학">인문대학</option>
-                <option value="자연과학대학">자연과학대학</option>
-                <option value="전자정보대학">전자정보대학</option>
+            <select onchange="categoryChange(this)">
+                <option value="0">단과대 선택</option>
+                <option value="1">경영대학</option>
+                <option value="2">공과대학</option>
+                <option value="3">농업생명환경대학</option>
+                <option value="4">바이오헬스공유대학</option>
+                <option value="5">사범대학</option>
+                <option value="6">사회과학대학</option>
+                <option value="7">생활과학대학</option>
+                <option value="8">수의과대학</option>
+                <option value="9">약학대학</option>
+                <option value="10">연계전공</option>
+                <option value="11">융합전공</option>
+                <option value="12">융합학과군</option>
+                <option value="13">의과대학</option>
+                <option value="14">인문대학</option>
+                <option value="15">자연과학대학</option>
+                <option value="16">전자정보대학</option>
             </select>
         </span>
 
-        <ul class="unfolded"><li class="child">방사광융합학과</li><li class="child">제약바이오학과</li><li class="child">천연물소재학과</li><li class="child">화장품산업학과</li></ul>
-        <li class="parent unfolded">사범대학</li>
-        <ul class="unfolded"><li class="child">교육학과</li><li class="child">국어교육과</li><li class="child">물리교육과</li><li class="child">사회교육과</li><li class="child">생물교육과</li><li class="child">수학교육과</li><li class="child">역사교육과</li><li class="child">영어교육과</li><li class="child">윤리교육과</li><li class="child">지구과학교육과</li><li class="child">지리교육과</li><li class="child">체육교육과</li><li class="child">화학교육과</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">교육학과</li><li class="child">국어교육과</li><li class="child">물리교육과</li><li class="child">사회교육과</li><li class="child">생물교육과</li><li class="child">수학교육과</li><li class="child">역사교육과</li><li class="child">영어교육과</li><li class="child">윤리교육과</li><li class="child">지구과학교육과</li><li class="child">지리교육과</li><li class="child">체육교육과</li><li class="child">화학교육과</li></ul>
-        <li class="parent unfolded">사회과학대학</li>
-        <ul class="unfolded"><li class="child">경제학과</li><li class="child">사회학과</li><li class="child">심리학과</li><li class="child">정치외교학과</li><li class="child">행정학과</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">경제학과</li><li class="child">사회학과</li><li class="child">심리학과</li><li class="child">정치외교학과</li><li class="child">행정학과</li></ul>
-        <li class="parent unfolded">생활과학대학</li>
-        <ul class="unfolded"><li class="child">소비자학과</li><li class="child">식품영양학과</li><li class="child">아동복지학과</li><li class="child">의류학과</li><li class="child">주거환경학과</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">소비자학과</li><li class="child">식품영양학과</li><li class="child">아동복지학과</li><li class="child">의류학과</li><li class="child">주거환경학과</li></ul>
-        <li class="parent unfolded">수의과대학</li>
-        <ul class="unfolded"><li class="child">수의예과</li><li class="child">수의학과</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">수의예과</li><li class="child">수의학과</li></ul>
-        <li class="parent unfolded">약학대학</li>
-        <ul class="unfolded"><li class="child">약학과</li><li class="child">제약학과</li></ul>
-        <li class="child">약학과</li>
-        <li class="child">제약학과</li>
-        <ul class="unfolded"><li class="child">약학과</li><li class="child">제약학과</li></ul>
-        <li class="parent unfolded">연계전공</li>
-        <ul class="unfolded"><li class="child">공통과학교육전공</li><li class="child">통합과학교육전공</li><li class="child">통합사회교육전공</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">공통과학교육전공</li><li class="child">통합과학교육전공</li><li class="child">통합사회교육전공</li></ul>
-        <li class="parent unfolded">융합전공</li>
-        <ul class="unfolded"><li class="child">과학커뮤니케이션</li><li class="child">국제개발협력과거버넌스</li><li class="child">노인복지</li><li class="child">농촌관광개발</li><li class="child">문화유산의공간정보학</li><li class="child">문화콘텐츠</li><li class="child">박물관전문인력</li><li class="child">번역출판전공</li><li class="child">벤처비즈니스전공</li><li class="child">보안컨설팅전공</li><li class="child">빅데이터</li><li class="child">사회적기업</li><li class="child">스마트자동차공학</li><li class="child">언론정보전공</li><li class="child">영.한 통역</li><li class="child">위기관리</li><li class="child">해외농업개발ㆍ협력전공</li><li class="child">지식재산스마트융합</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">과학커뮤니케이션</li><li class="child">국제개발협력과거버넌스</li><li class="child">노인복지</li><li class="child">농촌관광개발</li><li class="child">문화유산의공간정보학</li><li class="child">문화콘텐츠</li><li class="child">박물관전문인력</li><li class="child">번역출판전공</li><li class="child">벤처비즈니스전공</li><li class="child">보안컨설팅전공</li><li class="child">빅데이터</li><li class="child">사회적기업</li><li class="child">스마트자동차공학</li><li class="child">언론정보전공</li><li class="child">영.한 통역</li><li class="child">위기관리</li><li class="child">해외농업개발ㆍ협력전공</li><li class="child">지식재산스마트융합</li></ul>
-        <li class="parent unfolded">융합학과군</li>
-        <ul class="unfolded"><li class="child">디자인학과</li><li class="child">조형예술학과</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">디자인학과</li><li class="child">조형예술학과</li></ul>
-        <li class="parent unfolded">의과대학</li>
-        <ul class="unfolded"><li class="child">간호학과</li><li class="child">의예과</li><li class="child">의학과</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">간호학과</li><li class="child">의예과</li><li class="child">의학과</li></ul>
-        <li class="parent unfolded">인문대학</li>
-        <ul class="unfolded"><li class="child">고고미술사학과</li><li class="child">국어국문학과</li><li class="child">독일언어문화학과</li><li class="child">러시아언어문화학과</li><li class="child">사학과</li><li class="child">영어영문학과</li><li class="child">중어중문학과</li><li class="child">철학과</li><li class="child">프랑스언어문화학과</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">고고미술사학과</li><li class="child">국어국문학과</li><li class="child">독일언어문화학과</li><li class="child">러시아언어문화학과</li><li class="child">사학과</li><li class="child">영어영문학과</li><li class="child">중어중문학과</li><li class="child">철학과</li><li class="child">프랑스언어문화학과</li></ul>
-        <li class="parent unfolded">자연과학대학</li>
-        <ul class="unfolded"><li class="child">물리학과</li><li class="child">미생물학과</li><li class="child">생명과학과</li><li class="child">생화학과</li><li class="child">수학과</li><li class="child">정보통계학과</li><li class="child">지구환경과학과</li><li class="child">천문우주학과</li><li class="child">화학과</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <ul class="unfolded"><li class="child">물리학과</li><li class="child">미생물학과</li><li class="child">생명과학과</li><li class="child">생화학과</li><li class="child">수학과</li><li class="child">정보통계학과</li><li class="child">지구환경과학과</li><li class="child">천문우주학과</li><li class="child">화학과</li></ul>
-        <li class="parent unfolded">전자정보대학</li>
-        <ul class="unfolded"><li class="child">SW융합부전공</li><li class="child">소프트웨어학과</li><li class="child">소프트웨어학부</li><li class="child">전기공학부</li><li class="child">전자공학부</li><li class="child">정보통신공학부</li><li class="child">지능로봇공학과</li><li class="child">컴퓨터공학과</li></ul>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-        <li class="child"></li>
-
         <span>
-            <select name="전공">
-                <option value="1">안녕</option>
-                <option value="2">반가워</option>
-                <option value="3">밤밤</option>
+            <select id="major">
+                <option value="0">학과 선택</option>
             </select>
         </span>
         <span>
             <select name="학년">
-                <option value="1">안녕</option>
-                <option value="2">반가워</option>
-                <option value="3">밤밤</option>
+                <option value="선택">선택</option>
             </select>
         </span>
     </nav>
