--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
@@ -9,6 +10,7 @@
     <meta property="og:image" content="/images/main.png">
     <title>에브리타임 - 강의평 모아보기</title>
     <link rel="stylesheet" href="/css/style.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="/js/app.js"></script>
 
 </head>
@@ -25,6 +27,6 @@
                     <span><h4>교수별 조회</h4></span>
                     <span><h4>강의 통계</h4></span>
                 </nav>
-            
-                
+
+
             </div>
