--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,50 +1,50 @@
 <%- include ('header') %>
 
-<div id="body">
-    <nav class="nav_bar" id="nav2">
-        <span id="nav_btn1"><h5>전공</h5></span>
-        <span id="nav_btn2"><h5>교양</h5></span>
-        <span id="nav_btn3"><h5>교직</h5></span>
-        <span id="nav_btn4"><h5>일선</h5></span>
-        <!-- if (전공 == 참)일경우 document.write(밑에 3줄) -->
-        
-        <!-- <span><input></span> -->
-    </nav>
-    <nav class="nav_bar" id="nav3">
-        <span>
-            <select onchange="categoryChange(this)">
+    <div id="body">
+        <nav class="nav_bar" id="nav2">
+            <span id="nav_btn1"><h5>전공</h5></span>
+            <span id="nav_btn2"><h5>교양</h5></span>
+            <span id="nav_btn3"><h5>교직</h5></span>
+            <span id="nav_btn4"><h5>일선</h5></span>
+            <!-- if (전공 == 참)일경우 document.write(밑에 3줄) -->
+
+            <!-- <span><input></span> -->
+        </nav>
+        <nav class="nav_bar" id="nav3">
+            <span>
+            <select class = "major-selection">
                 <option value="0">단과대 선택</option>
-                <option value="1">경영대학</option>
-                <option value="2">공과대학</option>
-                <option value="3">농업생명환경대학</option>
-                <option value="4">바이오헬스공유대학</option>
-                <option value="5">사범대학</option>
-                <option value="6">사회과학대학</option>
-                <option value="7">생활과학대학</option>
-                <option value="8">수의과대학</option>
-                <option value="9">약학대학</option>
-                <option value="10">연계전공</option>
-                <option value="11">융합전공</option>
-                <option value="12">융합학과군</option>
-                <option value="13">의과대학</option>
-                <option value="14">인문대학</option>
-                <option value="15">자연과학대학</option>
-                <option value="16">전자정보대학</option>
+                <option value="경영대학">경영대학</option>
+                <option value="공과대학">공과대학</option>
+                <option value="농업생명환경대학">농업생명환경대학</option>  
+                <option value="바이오헬스공유대학">바이오헬스공유대학</option>
+                <option value="사범대학">사범대학</option>
+                <option value="사회과학대학">사회과학대학</option>
+                <option value="생활과학대학">생활과학대학</option>
+                <option value="수의과대학">수의과대학</option>
+                <option value="약학대학">약학대학</option>
+                <option value="연계전공">연계전공</option>
+                <option value="융합전공">융합전공</option>
+                <option value="융합학과군">융합학과군</option>
+                <option value="의과대학">의과대학</option>
+                <option value="인문대학">인문대학</option>
+                <option value="자연과학대학">자연과학대학</option>
+                <option value="전자정보대학">전자정보대학</option>
             </select>
         </span>
 
-        <span>
+            <span>
             <select id="major">
                 <option value="0">학과 선택</option>
             </select>
         </span>
-        <span>
+            <span>
             <select name="학년">
                 <option value="선택">선택</option>
             </select>
         </span>
-    </nav>
-    <!-- <nav class="nav_bar" id="nav3">
+        </nav>
+        <!-- <nav class="nav_bar" id="nav3">
         <span><h5>평가 높은 순</h5></span>
         <span><h5>평가 낮은 순</h5></span>
         <span><h5>평가 많은 순</h5></span>
@@ -53,65 +53,72 @@
             <h5>검색</h5>
         </span>
     </nav> -->
-    <div class="sources">
-        <table id="table">
-            <tbody>
-                <tr id="line">
-                    <td colspan="2">
-                        <h4>
-                            강의
-                        </h4>
-                    </td>
-                    <td>
-                        <h4>
-                            선호도
-                        </h4>
-                    </td>
-                    <td>
-                        <h4>
-                            평가
-                        </h4>
-                    </td>
-                </tr>
-            </tbody>
-            <!-- 10개마다 페이지 넘어가게 만들기 -->
-            <tfoot>
-                <% arr.forEach(function (arr, index) { %>
-                    
-                    <% arr.교수명 = arr.교수명.split(', ') %>
-                    <tr>
-                        <td id="lec_name" colspan="2">
-                            <h5><%=arr.과목명%></h5>
-                        </td>
-                        <td id="rate" rowspan="2">
-                            <h5>
-                                <%= (arr.강의평점 * 100) + "%"%>
-                            </h5>
-                        </td>
-                        <td id="rate_count" rowspan="2">
-                            <h5>
-                                <%= arr.강의평점%>
-                            </h5>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <h5 id="teacher">
-                                <% if(arr.교수명.length > 1) { %>
-                                <%=arr.교수명[0]%> 외 <%=arr.교수명.length - 1%>명
-                                <% } else {%>
-                                <%=arr.교수명%>
-                                <%}%>
-                            </h5>
+        <div class="sources">
+            <table id="table">
+                <tbody>
+                    <tr id="line">
+                        <td colspan="2">
+                            <h4>
+                                강의
+                            </h4>
                         </td>
                         <td>
-                            <h5 id="division"><%=arr.전공구분%></h5>
+                            <h4>
+                                선호도
+                            </h4>
+                        </td>
+                        <td>
+                            <h4>
+                                평가
+                            </h4>
                         </td>
                     </tr>
-                <% }); %>
-            </tfoot>
-        </table>
-    </div>
-</div>
+                </tbody>
+                <!-- 10개마다 페이지 넘어가게 만들기 -->
+                <tfoot>
+                    <% arr.forEach(function (arr, index) { %>
 
-<%- include ('footer') %>
+                        <% arr.교수명 = arr.교수명.split(', ') %>
+                            <tr>
+                                <td id="lec_name" colspan="2">
+                                    <h5>
+                                        <%=arr.과목명%>
+                                    </h5>
+                                </td>
+                                <td id="rate" rowspan="2">
+                                    <h5>
+                                        <%= (arr.강의평점 * 100) + "%"%>
+                                    </h5>
+                                </td>
+                                <td id="rate_count" rowspan="2">
+                                    <h5>
+                                        <%= arr.강의평점%>
+                                    </h5>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <h5 id="teacher">
+                                        <% if(arr.교수명.length > 1) { %>
+                                            <%=arr.교수명[0]%> 외
+                                                <%=arr.교수명.length - 1%>명
+                                                    <% } else {%>
+                                                        <%=arr.교수명%>
+                                                            <%}%>
+                                    </h5>
+                                </td>
+                                <td>
+                                    <h5 id="division">
+                                        <%=arr.전공구분%>
+                                    </h5>
+                                </td>
+                            </tr>
+                            <% }); %>
+                </tfoot>
+            </table>
+        </div>
+    </div>
+
+    <script src="/js/filter.js"></script>
+
+    <%- include ('footer') %>
