--- a/statics/scss/style.scss
+++ b/statics/scss/style.scss
@@ -3,14 +3,11 @@ $color2: #116F92;
 $color3: #F2F2F2;
 $color4: #e2efff;
 $color5: #9a9a9a;
-
 $hover1: #a4a594;
 $hover2: #F26A1B;
-
 @font-face {
     font-family: 'TSTAR';
-    src:url('TSTAR-PRO-Bold.otf') format('woff'),
-        url('TSTAR-PRO-Bold.otf') format('woff2');
+    src: url('TSTAR-PRO-Bold.otf') format('woff'), url('TSTAR-PRO-Bold.otf') format('woff2');
     /* 이런식으로 weight를 지정해서 사용할 수도 있다!*/
     font-weight: 400;
 }
@@ -52,15 +49,15 @@ body {
 p {
     line-height: 200%;
     vertical-align: middle;
-    word-break:keep-all;
+    word-break: keep-all;
 }
 
 .bg {
     /* background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ),url( "earth-wallpaper.jpg" ); */
     background-size: cover;
-    background-repeat : no-repeat;
+    background-repeat: no-repeat;
     background-position: center;
-    height : 100vh;
+    height: 100vh;
 }
 
 .board {
@@ -123,41 +120,47 @@ p {
 
 select {
     -moz-appearance: none;
-      -webkit-appearance: none;
-      appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
 }
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
 
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
 select {
-  /* 생략 */
+    /* 생략 */
     font-size: 0.75rem;
     font-weight: 400;
-    line-height: 1.5;   
+    line-height: 1.5;
     color: #444;
-    background-color: #fff; 
-    padding: 0.6em 1.4em 0.5em 0.8em; 
+    background-color: #fff;
+    padding: 0.6em 1.4em 0.5em 0.8em;
     border: 1px solid #aaa;
     border-radius: 0.5em;
     box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
     text-align-last: center;
     text-align: center;
     -ms-text-align-last: center;
--moz-text-align-last: center;
+    -moz-text-align-last: center;
     &:hover {
         border-color: #888;
     }
-
     &:focus {
         border-color: #aaa;
         box-shadow: 0 0 1px 3px rgba(59, 153, 252, 0.7);
         color: #222;
         outline: none;
     }
-
     &:disabled {
         opacity: 0.5;
     }
 }
+
+#table {
+    tfoot {
+        animation: fade-in 2s forwards;
+        tr {}
+    }
+}
+
 
 /* #nav2 span{
     background-color: #F87F0D;
@@ -211,8 +214,6 @@ select {
                         }
                     }
                 }
-                
-                
                 &:nth-child(2n) {
                     font-size: small;
                     color: $color5;
@@ -233,7 +234,6 @@ select {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     padding: 0 5%;
-    
     .detail-box {
         padding: 0 5%;
         h4 {
@@ -251,6 +251,8 @@ select {
 
     max-width: 120px;
 } */
+
+
 /* tfoot tr:nth-child(2n+1) td:nth-child(2){
     font-size: small;
     color:#9a9a9a;
@@ -259,4 +261,13 @@ select {
 #footer {
     /* color: #f2f8ff; */
     padding: 2% 0;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
