--- a/views/stat.ejs
+++ b/views/stat.ejs
@@ -2,7 +2,7 @@
 
 <div id="body">
     <nav class="nav_bar" id="nav2">
-        <span id="nav_btn1"><h5>뒤로가기</h5></span>
+        <span id="nav_btn1" onclick="history.back()"><h5>뒤로가기</h5></span>
         <span id="nav_btn2"><h5></h5></span>
         <span id="nav_btn3"><h5></h5></span>
         <span id="nav_btn4"><h5></h5></span>
