--- a/views/main.ejs
+++ b/views/main.ejs
@@ -10,40 +10,7 @@
 
             <!-- <span><input></span> -->
         </nav>
-        <nav class="nav_bar" id="nav3">
-            <span>
-            <select class = "major-selection">
-                <option value="0">단과대 선택</option>
-                <option value="경영대학">경영대학</option>
-                <option value="공과대학">공과대학</option>
-                <option value="농업생명환경대학">농업생명환경대학</option>  
-                <option value="바이오헬스공유대학">바이오헬스공유대학</option>
-                <option value="사범대학">사범대학</option>
-                <option value="사회과학대학">사회과학대학</option>
-                <option value="생활과학대학">생활과학대학</option>
-                <option value="수의과대학">수의과대학</option>
-                <option value="약학대학">약학대학</option>
-                <option value="연계전공">연계전공</option>
-                <option value="융합전공">융합전공</option>
-                <option value="융합학과군">융합학과군</option>
-                <option value="의과대학">의과대학</option>
-                <option value="인문대학">인문대학</option>
-                <option value="자연과학대학">자연과학대학</option>
-                <option value="전자정보대학">전자정보대학</option>
-            </select>
-        </span>
-
-            <span>
-            <select id="major">
-                <option value="0">학과 선택</option>
-            </select>
-        </span>
-            <span>
-            <select name="학년">
-                <option value="선택">선택</option>
-            </select>
-        </span>
-        </nav>
+        
         <!-- <nav class="nav_bar" id="nav3">
         <span><h5>평가 높은 순</h5></span>
         <span><h5>평가 낮은 순</h5></span>
@@ -54,6 +21,44 @@
         </span>
     </nav> -->
         <div class="sources">
+            <nav class="nav_bar" id="nav3">
+                <span>
+                <select id = "major">
+                    <option value="*">단과대 선택</option>
+                    <option value="경영대학">경영대학</option>
+                    <option value="공과대학">공과대학</option>
+                    <option value="농업생명환경대학">농업생명환경대학</option>  
+                    <option value="바이오헬스공유대학">바이오헬스공유대학</option>
+                    <option value="사범대학">사범대학</option>
+                    <option value="사회과학대학">사회과학대학</option>
+                    <option value="생활과학대학">생활과학대학</option>
+                    <option value="수의과대학">수의과대학</option>
+                    <option value="약학대학">약학대학</option>
+                    <option value="연계전공">연계전공</option>
+                    <option value="융합전공">융합전공</option>
+                    <option value="융합학과군">융합학과군</option>
+                    <option value="의과대학">의과대학</option>
+                    <option value="인문대학">인문대학</option>
+                    <option value="자연과학대학">자연과학대학</option>
+                    <option value="전자정보대학">전자정보대학</option>
+                </select>
+            </span>
+    
+                <span>
+                <select id="major-detail">
+                    <option value="*">학과 선택</option>
+                </select>
+            <!-- </span>
+                <span>
+                <select id="age">
+                    <option value="*">선택</option>
+                    <option value="1학년">1학년</option>
+                    <option value="2학년">2학년</option>
+                    <option value="3학년">3학년</option>
+                    <option value="4학년">4학년</option>
+                </select>
+            </span> -->
+            </nav>
             <table id="table">
                 <tbody>
                     <tr id="line">
@@ -67,11 +72,11 @@
                                 선호도
                             </h4>
                         </td>
-                        <td>
+                        <!-- <td>
                             <h4>
                                 평가
                             </h4>
-                        </td>
+                        </td> -->
                     </tr>
                 </tbody>
                 <!-- 10개마다 페이지 넘어가게 만들기 -->
@@ -81,30 +86,31 @@
                         <% arr.교수명 = arr.교수명.split(', ') %>
                             <tr>
                                 <td id="lec_name" colspan="2">
-                                    <h5>
+                                    <h5><a href="/stats?lecCode=<%= arr.id %>" id="lec_title">
                                         <%=arr.과목명%>
+                                    </a>
                                     </h5>
                                 </td>
                                 <td id="rate" rowspan="2">
-                                    <h5>
-                                        <%= (arr.강의평점 * 100) + "%"%>
+                                    <h5>    
+                                        <%= (arr.강의평점 * 20).toFixed(1) + "%"%>
                                     </h5>
                                 </td>
-                                <td id="rate_count" rowspan="2">
+                                <!-- <td id="rate_count" rowspan="2">
                                     <h5>
                                         <%= arr.강의평점%>
                                     </h5>
-                                </td>
+                                </td> -->
                             </tr>
                             <tr>
                                 <td>
                                     <h5 id="teacher">
                                         <% if(arr.교수명.length > 1) { %>
-                                            <%=arr.교수명[0]%> 외
-                                                <%=arr.교수명.length - 1%>명
-                                                    <% } else {%>
-                                                        <%=arr.교수명%>
-                                                            <%}%>
+                                        <%=arr.교수명[0]%> 외
+                                        <%=arr.교수명.length - 1%>명
+                                        <% } else {%>
+                                        <%=arr.교수명%>
+                                        <%}%>
                                     </h5>
                                 </td>
                                 <td>
@@ -120,5 +126,6 @@
     </div>
 
     <script src="/js/filter.js"></script>
+        <script src="/js/app.js"></script>
 
     <%- include ('footer') %>
