--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -25,7 +25,7 @@
   font-style: normal;
 }
 body {
-  background-color: #1B5465;
+  background-color: #116F92;
   color: white;
   font-family: "paybooc-Medium", "TSTAR", Helvetica, Arial, sans-serif;
   text-align: center;
@@ -90,21 +90,31 @@ p {
   width: 50%;
 }
 
-a {
+table a {
   text-decoration: none;
 }
-a:link {
+table a:link {
   color: black;
 }
-a:visited {
+table a:visited {
   color: black;
 }
-a:hover {
+table a:hover {
   color: #F26A1B;
 }
 
+#nav1 a:link {
+  color: #F2F2F2;
+}
+#nav1 a:visited {
+  color: #F2F2F2;
+}
+#nav1 a:hover {
+  color: #F2F2F2;
+}
+
 #nav1 {
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   column-gap: 5%;
   padding: 0 5%;
   /* color: #e2efff; */
@@ -170,6 +180,7 @@ a:hover {
   background-color: #F2F2F2;
   color: black;
   padding-bottom: 60px;
+  min-height: 100%;
 }
 
 .sources {
@@ -196,7 +207,9 @@ a:hover {
 .sources table tfoot {
   font-family: "CBNU-Regular";
   text-align: center;
-  height: 20px;
+}
+.sources table tfoot tr {
+  height: 24px;
 }
 .sources table tfoot tr td:nth-child(1) {
   text-align: left;
@@ -206,7 +219,14 @@ a:hover {
   color: #F26A1B;
   cursor: pointer;
 }
+.sources table tfoot tr:nth-child(n) {
+  vertical-align: bottom;
+}
+.sources table tfoot tr:nth-child(n) td:nth-child(2) {
+  vertical-align: middle;
+}
 .sources table tfoot tr:nth-child(2n) {
+  vertical-align: top;
   font-size: small;
   color: #9a9a9a;
 }
@@ -231,6 +251,108 @@ a:hover {
 }
 .box-bar .detail-box p {
   font-size: 1.25vmax;
+}
+
+.switch-button {
+  position: relative;
+  display: inline-block;
+  width: 55px;
+  height: 30px;
+}
+.switch-button input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+#switch-info {
+  height: 30px;
+  vertical-align: middle;
+}
+#switch-info p {
+  display: inline-block;
+  margin: 0 6px;
+  color: #9a9a9a;
+  font-size: 10px;
+}
+
+.onoff-switch {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 20px;
+  background-color: #ccc;
+  box-shadow: inset 1px 5px 1px #999;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+.onoff-switch:before {
+  position: absolute;
+  content: "";
+  height: 22px;
+  width: 22px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #fff;
+  -webkit-transition: 0.5s;
+  transition: 0.4s;
+  border-radius: 20px;
+}
+
+.switch-button input:checked + .onoff-switch {
+  background-color: #116F92;
+  box-shadow: inset 1px 5px 1px #1B5465;
+}
+
+.switch-button input:checked + .onoff-switch:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.button-search,
+.button-search::after {
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.button-search {
+  min-width: 60px;
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #444;
+  background-color: #fff;
+  padding: 0.6em 1.4em 0.5em 0.8em;
+  margin: 0 6px;
+  border: 1px solid #aaa;
+  border-radius: 0.5em;
+  box-shadow: 0 1px 0 1px rgba(0, 0, 0, 0.04);
+  text-align-last: center;
+  text-align: center;
+  -ms-text-align-last: center;
+  -moz-text-align-last: center;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  appearance: none;
+}
+
+.button-search::before,
+.button-search::after {
+  background: #fff;
+  content: "";
+  position: absolute;
+  z-index: -1;
+}
+
+.button-search:hover {
+  color: #1B5465;
+  cursor: pointer;
 }
 
 /* 
