--- a/views/header.ejs
+++ b/views/header.ejs
@@ -22,8 +22,9 @@
                     <h1>Lecture Stats</h1>
                 </span>
                 <nav class="nav_bar" id="nav1">
-                    <span><h4>과목별 조회</h4></span>
-                    <span><h4>교수별 조회</h4></span>
-                    <span><h4>강의 통계</h4></span>
+                    <span><a href="/major"><h4>전공 강의</h4></a></span>
+                    <span><a href="/general"><h4>교양 강의</h4></a></span>
+                    <span><a href="/edu"><h4>교직 강의</h4></a></span>
+                    <span><a href="/etc"><h4>일선 강의</h4></a></span>
                 </nav>
             </div>
