--- a/views/4-etc.ejs
+++ b/views/4-etc.ejs
@@ -1,77 +1,18 @@
 <%- include ('header') %>
 
     <div id="body">
-        
-        <!-- <nav class="nav_bar" id="nav3">
-        <span><h5>평가 높은 순</h5></span>
-        <span><h5>평가 낮은 순</h5></span>
-        <span><h5>평가 많은 순</h5></span>
-        <span>
-            <input>
-            <h5>검색</h5>
-        </span>
-    </nav> -->
         <div class="sources">
-            <nav class="nav_bar" id="nav3">
-                <!-- <span>
-                    <label class="switch-button">
-                        <input id="zeroCheck"type="checkbox" onclick="checkedOn(event)"/>
-                        
-                        <span class="onoff-switch"></span>
-                    </label>
-                    
-                </span>
-                <span id="switch-info">
-                    <p>선호도 0% 숨기기</p>
-                </span> -->
-                <span>
-                <select id = "major">
-                    <option value="*">단과대 선택</option>
-                    <option value="경영대학">경영대학</option>
-                    <option value="공과대학">공과대학</option>
-                    <option value="농업생명환경대학">농업생명환경대학</option>  
-                    <option value="바이오헬스공유대학">바이오헬스공유대학</option>
-                    <option value="사범대학">사범대학</option>
-                    <option value="사회과학대학">사회과학대학</option>
-                    <option value="생활과학대학">생활과학대학</option>
-                    <option value="수의과대학">수의과대학</option>
-                    <option value="약학대학">약학대학</option>
-                    <option value="연계전공">연계전공</option>
-                    <option value="융합전공">융합전공</option>
-                    <option value="융합학과군">융합학과군</option>
-                    <option value="의과대학">의과대학</option>
-                    <option value="인문대학">인문대학</option>
-                    <option value="자연과학대학">자연과학대학</option>
-                    <option value="전자정보대학">전자정보대학</option>
-                </select>
+        <nav class="nav_bar" id="nav3">
+            <span>
+                <button class="button-search" id="button-default" value="일반선택">기본</button>
             </span>
             <span>
-                <select id="major-detail">
-                    <option value="*">학과 선택</option>
-                </select>
-            </span>
-            <!-- <span>
-                <button id="button-search">탐색</button>
-            </span> -->
-            <span>
-                <button id="button-inc">기본</button>
+                <button class="button-search" id="button-dec" value="ASC">높은 순</button>
             </span>
             <span>
-                <button id="button-inc">높은 순</button>
+                <button class="button-search" id="button-inc" value="DESC">낮은 순</button>
             </span>
-            <span>
-                <button id="button-dec">낮은 순</button>
-            </span>
-            <!-- <span>
-                <select id="age">
-                    <option value="*">선택</option>
-                    <option value="1학년">1학년</option>
-                    <option value="2학년">2학년</option>
-                    <option value="3학년">3학년</option>
-                    <option value="4학년">4학년</option>
-                </select>
-            </span> -->
-            </nav>
+        </nav>
             <table id="table">
                 <tbody>
                     <tr id="line">
