--- a/views/header.ejs
+++ b/views/header.ejs
@@ -19,7 +19,7 @@
         <div class="board">
             <div id="header" class="info">
                 <span>
-                    <h1>Lecture Stats</h1>
+                    <h1 id="title"><a href="/">Lecture Stats</a></h1>
                 </span>
                 <nav class="nav_bar" id="nav1">
                     <span><a href="/major"><h4>전공 강의</h4></a></span>
