--- a/statics/scss/style.scss
+++ b/statics/scss/style.scss
@@ -286,15 +286,19 @@ table a {
 .box-bar {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    padding: 0 5%;
+    padding: 10% 2%;
     .detail-box {
-        padding: 0 5%;
+        padding: 0 2%;
         h4 {
-            font-size: 1.75vmax;
+            font-size: 1vmax;
         }
         p {
-            font-size: 1.25vmax;
+            font-size: 0.75vmax;
         }
+        // &:nth-child(3) {
+        //     grid-column-start: 3;
+        //     grid-column-end: 5;
+        // }
     }
 }
 
