--- a/views/stat.ejs
+++ b/views/stat.ejs
@@ -30,22 +30,23 @@
                 <h3><%= target.교수명 %></h3>
                 <h5><%= target.전공구분 %> - <%= target.학년 %></h5>
             </div>
+            <% target.수업시간 = target.수업시간.split('[')%>
             <div class="box-bar">
                 <div class="detail-box">
-                    <h5>강의코드</h5>
+                    <h4>강의코드</h4>
                     <p><%= target.id %></p>
                 </div>
                 <div class="detail-box">
-                    <h5>학점</h5>
-                    <p><%= target.학점 %></p>
+                    <h4>학점</h4>
+                    <p><%= target.학점 %>학점</p>
                 </div>
                 <div class="detail-box">
-                    <h5>강의시간</h5>
-                    <p><%= target.학년 %></p>
+                    <h4>강의시간</h4>
+                    <p><%= target.수업시간[0] %></p>
                 </div>
                 <div class="detail-box">
-                    <h5>강의장소</h5>
-                    <p><%= target.학년 %></p>
+                    <h4>강의장소</h4>
+                    <p><%= target.수업시간[1].replace(']', '').split('(',1) %></p>
                 </div>
             </div>
             
