add more info on page

--- a/statics/css/style.css
+++ b/statics/css/style.css
@@ -140,7 +140,7 @@ table a:hover {
   grid-template-columns: repeat(4, 1fr);
   /* width: 50%; */
   column-gap: 5%;
-  background-color: #116F92;
+  background-color: #1B5465;
 }
 
 #nav3 {
