--- a/views/1-major.ejs
+++ b/views/1-major.ejs
@@ -113,7 +113,9 @@
                                 </td>
                                 <td>
                                     <h5 id="division">
+                                        <%=arr.학과%> - 
                                         <%=arr.전공구분%>
+                                        (<%=arr.학년%>)
                                     </h5>
                                 </td>
                             </tr>
